welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: too many arguments for method ==: (x$1: Any)Boolean
while (litMessage==(A,B,L,Z,I,X)){
                 ^