welcome.lessons.welcome.bdr.BDR.scala.code
while (litMessage==(A,B,L,Z,I,X)){
  recule(1)
}